# markovs_text_chain

./: .clang-format  .gitignore  CMakeLists.txt  FileDownloader.cpp  FileDownloader.h  MarkovsChain.cpp  MarkovsChain.h  Misc.h  README.md  Tokenizer.cpp  Tokenizer.h  main.cpp
cmake_modules/: FindLIBMARKOVS_CHAIN.cmake  FindLIBTOKENIZER.cmake
command_line_parser/: CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h
curl_downloader/: CMakeLists.txt  CurlDownloader.cpp  CurlDownloader.h
learner/: CMakeLists.txt  Curl.cpp  Curl.h  FileDownloader.cpp  FileDownloader.h  Learner.cpp  Learner.h  main.cpp
markovs_chain/: CMakeLists.txt  MarkovsChain.cpp  MarkovsChain.h
test_urls/: tu1.txt  tu2.txt  tu3.txt  tu4.txt
tests/: CMakeLists.txt  FileDownloaderTest.cpp  main.cpp
text_generator/: CMakeLists.txt  TextGenerator.cpp  main.cpp
tokenizer/: CMakeLists.txt  Tokenizer.cpp  Tokenizer.h
