cmake_minimum_required(VERSION 3.10)

project(markovs_chain)

set(dir ${LIBRARIES_DIR})

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${dir})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${dir})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${dir})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${dir})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${dir})

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${dir})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${dir})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${dir})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${dir})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_MINSIZEREL ${dir})

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${dir})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${dir})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${dir})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO ${dir})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL ${dir})


find_package(LIBTOKENIZER REQUIRED)
include_directories(${LIBTOKENIZER_INCLUDE_DIR})

set(SOURCES
    MarkovsChain.h
    MarkovsChain.cpp
    )

add_library(${PROJECT_NAME} STATIC ${SOURCES})
target_link_libraries(${PROJECT_NAME} ${LIBTOKENIZER_LIB})

